# synthetic-two-hop

./: .gitignore  README.md  pyproject.toml  run_experiment.sbatch  run_test_experiment.sh
datasets/synthetic_spouses/: all_in_context_test.jsonl  all_in_context_test_1.jsonl  all_in_context_test_2.jsonl  all_in_context_test_3.jsonl
datasets/synthetic_spouses/all/: 2hop_fewshots_nocot.jsonl
datasets/synthetic_spouses/no_paraphrases/: 2hop_fewshots_cot.jsonl
datasets/synthetic_spouses/no_paraphrases_n20/: 2hop_fewshots_nocot.jsonl
datasets/synthetic_spouses/no_paraphrases_n40/: 2hop_fewshots_cot.jsonl
experiments/: run_ft_ba2ba2_experiment.sh  run_ft_experiment.sh  run_ft_experiment_debug.sh  run_ft_experiment_semi_synthetic.sh
experiments/auxiliary_loss/: README.md
experiments/auxiliary_loss/configs/: embed_cosine.yaml  logit.yaml
experiments/fully_synthetic/: README.md  evaluate_openai_ft_models.py  trl_config.yaml
experiments/fully_synthetic/configs/: atomic.yaml  no_cot_and_cot.yaml  nocot.yaml
experiments/in_context/: README.md  evaluate.py
experiments/layer_ordering/: README.md
experiments/layer_ordering/configs/: 2.yaml  a.yaml  b.yaml
experiments/real_facts_frontier_models/: README.md  dataset_stats.py  evaluate_api_models.py  plot.py
experiments/real_facts_frontier_models/results/: two_hop_results_hopping_too_late.csv  two_hop_results_hopping_too_late_2.csv  two_hop_results_hopping_too_late_new_ants.csv
experiments/samedoc/: README.md  plot.py
experiments/samedoc/configs/: both_hops_samedoc.yaml  both_hops_samedoc_distractor_triplets.yaml  (+7 more)
experiments/samedoc_two_stage/: README.md  both_hops_samedoc_distractor_triplets_facts.yaml  both_hops_samedoc_distractor_triplets_facts_2hop.yaml
experiments/semi_synthetic/: README.md  evaluate_second_hop.py  list_second_hop_pairs.py  plot.py  second_hop_evaluation_results.csv  second_hop_prompt_templates.py  second_hop_results.json  trl_config.yaml
latent_reasoning/: common.py  evaluate.py  fsdp_accelerate_config.yaml  fsdp_accelerate_config_debug.yaml  test_freezing.py  train.py  train_curriculum.py  trainer.py
(+341 files in other folders)
